--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,25 @@
-# Compiled class file
-*.class
+# Build products
+target/
 
-# Log file
-*.log
+# IntelliJ data
+*.iml
+.idea/
+.ipr
 
-# BlueJ files
-*.ctxt
+# Eclipse IDE
+.project
+.classpath
+.checkstyle
+.settings/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Documentation build output
+/docs/_build
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+.DS_Store
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+derby.log
+
+# Test databases
+__test_database_*
+test.sqlite
+*.db-journal
